src/containers/ProfileDetails/components/index.module.scss
.ProfilePage {
  :global(.ant-form-item) {
    flex: 1;
  }
  :global(.ant-checkbox) {
    margin-left: 10px;
  }

  :global(.ant-radio) {
    margin-left: 10px;
  }

  :global(.ant-table) {
    margin-bottom: 10px;
  }

  :global(.ant-collapse) {
    margin-top: 10px;
    background: #141414;
  }
  :global(.ant-list) {
    padding: 20px;
  }

  .Disclaimer {
    margin-left: 10px;
    margin-right: 5px;
    margin-bottom: 5px;
    font-style: italic;
    font-size: 10px;
  }

  .Image {
    padding: 20px;
    cursor: pointer;
  }

  code {
    background-color: #35a649;
    color: black;
  }

  .infoCard {
    margin-right: 10px;
  }

  :global(.ant-upload.ant-upload-select-picture-card) {
    width: 100%;
  }
}

.FlexDiv {
  display: flex;
  flex-wrap: wrap;
  & > * {
    margin: 0;
    margin-right: 40px;
  }
  & > :last-child {
    margin-right: 0;
  }
}

.InlineDiv {
  display: flex;
  justify-content: space-around;

  & > * {
    margin: 0;
    margin-right: 10px;
  }
  & > :last-child {
    margin-right: 0;
  }
}

.InlineCenterDiv {
  display: flex;
  justify-content: center;
}

.InlineCenterDiv > * {
  margin: -15px 10px 20px 0;
}

.InlineEndDiv {
  display: flex;
  justify-content: flex-end;
}

.ServiceZones {
  .RadiusInline {
    display: flex;
    justify-content: space-around;
    flex: 1;
    & > * {
      margin: 0 5px;
    }
  }
  .iconButton {
    margin: 0;
    margin-right: 10px;
  }
  :global(.ant-list-item-meta) {
    flex: none;
  }
  :global(.ant-card) {
    flex: 1;
  }
}

.Whitelist {
  margin-left: 16.66666667%;
  max-width: 50%;

  &:global(.ant-list) {
    padding: 0;
  }
}

.InfoButton {
  background-color: transparent;
  border: none;
}

.DeleteButton {
  margin: 20px 10px 0 0;
}

.ToolTip {
  margin: 10px 20px 0 0;
}

.BonjourServices {
  margin-bottom: 10px;
}

